Switch email signup from Buttondown to Kit

--- a/index.html
+++ b/index.html
@@ -429,11 +429,11 @@
         <p>Be the first to know when Kindling launches.</p>
         <form
           class="signup-form"
-          action="https://buttondown.com/api/emails/embed-subscribe/kindling"
+          action="https://app.kit.com/forms/8996985/subscriptions"
           method="post"
           target="_blank"
         >
-          <input type="email" name="email" placeholder="your@email.com" required>
+          <input type="email" name="email_address" placeholder="your@email.com" required>
           <button type="submit">Notify Me</button>
         </form>
       </div>
@@ -546,11 +546,11 @@
       <div class="signup-container">
         <form
           class="signup-form"
-          action="https://buttondown.com/api/emails/embed-subscribe/kindling"
+          action="https://app.kit.com/forms/8996985/subscriptions"
           method="post"
           target="_blank"
         >
-          <input type="email" name="email" placeholder="your@email.com" required>
+          <input type="email" name="email_address" placeholder="your@email.com" required>
           <button type="submit">Join Waitlist</button>
         </form>
       </div>
