--- a/welcome.html
+++ b/welcome.html
@@ -4,6 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Welcome to Kindling</title>
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-VJQ72G87FE"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-VJQ72G87FE');
+  </script>
   <meta name="description" content="You're on the Kindling waitlist! Join the community and follow along.">
   <meta name="robots" content="noindex">
 
