Multi-page layour

--- a/index.html
+++ b/index.html
@@ -494,11 +494,11 @@
         <span>kindling</span>
       </a>
       <div class="navbar-links">
-        <a href="/#features" class="navbar-link">Features</a>
-        <a href="/blog/" class="navbar-link">Blog</a>
-        <a href="https://github.com/smith-and-web/kindling/wiki" class="navbar-link hide-mobile" target="_blank" rel="noopener">Docs</a>
-        <a href="https://github.com/smith-and-web/kindling" class="navbar-link hide-mobile" target="_blank" rel="noopener">GitHub</a>
-        <a href="/#download" class="navbar-cta">Download</a>
+        <a href="/features/" class="navbar-link">Features</a>
+        <a href="/download/" class="navbar-link">Download</a>
+        <a href="/compare/" class="navbar-link">Compare</a>
+        <a href="/open-source/" class="navbar-link">Open Source</a>
+        <a href="/download/" class="navbar-cta">Download</a>
       </div>
     </div>
   </nav>
@@ -527,30 +527,13 @@
         Your outline shouldn't disappear when you start writing. Kindling is a desktop writing app that keeps your scene beats, character notes, and story structure visible while you draft. Available for Windows, macOS, and Linux.
       </p>
 
-      <!-- Download Section -->
+      <!-- Download CTA -->
       <div id="download" class="download-card">
         <h2>Ready to start writing?</h2>
         <p>Download Kindling and keep your outline visible while you draft.</p>
-
-        <div class="download-buttons">
-          <a href="https://github.com/smith-and-web/kindling/releases/latest/download/Kindling_1.0.0-beta_aarch64.dmg" class="download-btn" data-platform="mac-arm" onclick="trackDownload('mac-arm')">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M18.71 19.5c-.83 1.24-1.71 2.45-3.05 2.47-1.34.03-1.77-.79-3.29-.79-1.53 0-2 .77-3.27.82-1.31.05-2.3-1.32-3.14-2.53C4.25 17 2.94 12.45 4.7 9.39c.87-1.52 2.43-2.48 4.12-2.51 1.28-.02 2.5.87 3.29.87.78 0 2.26-1.07 3.81-.91.65.03 2.47.26 3.64 1.98-.09.06-2.17 1.28-2.15 3.81.03 3.02 2.65 4.03 2.68 4.04-.03.07-.42 1.44-1.38 2.83M13 3.5c.73-.83 1.94-1.46 2.94-1.5.13 1.17-.34 2.35-1.04 3.19-.69.85-1.83 1.51-2.95 1.42-.15-1.15.41-2.35 1.05-3.11z"/></svg>
-            macOS (Apple Silicon)
-          </a>
-          <a href="https://github.com/smith-and-web/kindling/releases/latest/download/Kindling_1.0.0-beta_x64.dmg" class="download-btn secondary" data-platform="mac-intel" onclick="trackDownload('mac-intel')">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M18.71 19.5c-.83 1.24-1.71 2.45-3.05 2.47-1.34.03-1.77-.79-3.29-.79-1.53 0-2 .77-3.27.82-1.31.05-2.3-1.32-3.14-2.53C4.25 17 2.94 12.45 4.7 9.39c.87-1.52 2.43-2.48 4.12-2.51 1.28-.02 2.5.87 3.29.87.78 0 2.26-1.07 3.81-.91.65.03 2.47.26 3.64 1.98-.09.06-2.17 1.28-2.15 3.81.03 3.02 2.65 4.03 2.68 4.04-.03.07-.42 1.44-1.38 2.83M13 3.5c.73-.83 1.94-1.46 2.94-1.5.13 1.17-.34 2.35-1.04 3.19-.69.85-1.83 1.51-2.95 1.42-.15-1.15.41-2.35 1.05-3.11z"/></svg>
-            macOS (Intel)
-          </a>
-          <a href="https://github.com/smith-and-web/kindling/releases/latest/download/Kindling_1.0.0-beta_x64-setup.msi" class="download-btn secondary" data-platform="windows" onclick="trackDownload('windows')">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M0 3.449L9.75 2.1v9.451H0m10.949-9.602L24 0v11.4H10.949M0 12.6h9.75v9.451L0 20.699M10.949 12.6H24V24l-12.9-1.801"/></svg>
-            Windows
-          </a>
-          <a href="https://github.com/smith-and-web/kindling/releases/latest/download/Kindling_1.0.0-beta_amd64.AppImage" class="download-btn secondary" data-platform="linux" onclick="trackDownload('linux')">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M12.504 0c-.155 0-.315.008-.48.021-4.226.333-3.105 4.807-3.17 6.298-.076 1.092-.3 1.953-1.05 3.02-.885 1.051-2.127 2.75-2.716 4.521-.278.832-.41 1.684-.287 2.489a.424.424 0 00-.11.135c-.26.268-.45.6-.663.839-.199.199-.485.267-.797.4-.313.136-.658.269-.864.68-.09.189-.136.394-.132.602 0 .199.027.4.055.536.058.399.116.728.04.97-.249.68-.28 1.145-.106 1.484.174.334.535.47.94.601.81.2 1.91.135 2.774.6.926.466 1.866.67 2.616.47.526-.116.97-.464 1.208-.946.587-.003 1.23-.269 2.26-.334.699-.058 1.574.267 2.577.2.025.134.063.198.114.333l.003.003c.391.778 1.113 1.132 1.884 1.071.771-.06 1.592-.536 2.257-1.306.631-.765 1.683-1.084 2.378-1.503.348-.199.629-.469.649-.853.023-.4-.2-.811-.714-1.376v-.097l-.003-.003c-.17-.2-.25-.535-.338-.926-.085-.401-.182-.786-.492-1.046h-.003c-.059-.054-.123-.067-.188-.135a.357.357 0 00-.19-.064c.431-1.278.264-2.55-.173-3.694-.533-1.41-1.465-2.638-2.175-3.483-.796-1.005-1.576-1.957-1.56-3.368.026-2.152.236-6.133-3.544-6.139zm.529 3.405h.013c.213 0 .396.062.584.198.19.135.33.332.438.533.105.259.158.459.166.724 0-.02.006-.04.006-.06v.105a.086.086 0 01-.004-.021l-.004-.024a1.807 1.807 0 01-.15.706.953.953 0 01-.213.335.71.71 0 00-.088-.042c-.104-.045-.198-.064-.284-.133a1.312 1.312 0 00-.22-.066c.05-.06.146-.133.183-.198.053-.128.082-.264.088-.402v-.02a1.21 1.21 0 00-.061-.4c-.045-.134-.101-.2-.183-.333-.084-.066-.167-.132-.267-.132h-.016c-.093 0-.176.03-.262.132a.8.8 0 00-.205.334 1.18 1.18 0 00-.09.4v.019c.002.089.008.179.02.267-.193-.067-.438-.135-.607-.202a1.635 1.635 0 01-.018-.2v-.02a1.772 1.772 0 01.15-.768c.082-.22.232-.406.43-.534a.985.985 0 01.594-.2zm-2.962.059h.036c.142 0 .27.048.399.135.146.129.264.288.344.465.09.199.14.4.153.667v.004c.007.134.006.2-.002.266v.08c-.03.007-.056.018-.083.024-.152.055-.274.135-.393.2.012-.09.013-.18.003-.267v-.015c-.012-.133-.04-.2-.082-.333a.613.613 0 00-.166-.267.248.248 0 00-.183-.064h-.021c-.071.006-.13.04-.186.132a.552.552 0 00-.12.27.944.944 0 00-.023.33v.015c.012.135.037.2.08.334.046.134.098.2.166.268.01.009.02.018.034.024-.07.057-.117.07-.176.136a.304.304 0 01-.131.068 2.62 2.62 0 01-.275-.402 1.772 1.772 0 01-.155-.667 1.759 1.759 0 01.08-.668 1.43 1.43 0 01.283-.535c.128-.133.26-.2.418-.2zm1.37 1.706c.332 0 .733.065 1.216.399.293.2.523.269 1.052.468h.003c.255.136.405.266.478.399v-.131a.571.571 0 01.016.47c-.123.31-.516.643-1.063.842v.002c-.268.135-.501.333-.775.465-.276.135-.588.292-1.012.267a1.139 1.139 0 01-.448-.067 3.566 3.566 0 01-.322-.198c-.195-.135-.363-.332-.612-.465v-.005h-.005c-.4-.246-.616-.512-.686-.71-.07-.268-.005-.47.193-.6.224-.135.38-.271.483-.336.104-.074.143-.102.176-.131h.002c.186-.133.36-.333.583-.467.097-.067.197-.135.382-.202a.86.86 0 01.34-.068zM7.716 7.633c.306 0 .593.06.857.18.227.115.453.272.675.47.22.162.413.357.559.573.146.191.246.393.3.586a1.54 1.54 0 01.043.505v.024c-.01.17-.043.34-.101.508-.058.17-.14.339-.247.502-.097.163-.22.32-.371.463a4.93 4.93 0 01-.539.433c-.137.092-.284.178-.433.257a5.88 5.88 0 01-.484.237c-.185.08-.36.152-.525.218a11.62 11.62 0 01-.453.155l.004.006h.003a.223.223 0 01.059.134c.007.026.008.054.001.08a.166.166 0 01-.037.063l-.01.01-.01.008c-.014.01-.028.02-.043.028a.39.39 0 01-.072.026c-.045.013-.095.018-.145.015a.506.506 0 01-.104-.013l-.04-.01-.012-.005-.01-.003c-.062-.026-.097-.058-.129-.091a.283.283 0 01-.066-.125c-.007-.042-.003-.091.008-.138a.424.424 0 01.04-.101l.005-.008a.376.376 0 01.078-.088l.01-.009.012-.01c.021-.016.045-.033.068-.049l.012-.009.063-.044c.076-.056.163-.114.248-.17.076-.045.15-.091.221-.137.143-.091.28-.181.408-.27.15-.097.28-.203.39-.318.104-.112.188-.23.249-.36.062-.134.095-.278.095-.432 0-.23-.072-.443-.21-.63-.14-.186-.332-.34-.557-.46a2.26 2.26 0 00-.683-.243 2.243 2.243 0 00-.69-.003c-.23.039-.431.114-.602.224-.171.11-.308.25-.408.42a1.05 1.05 0 00-.139.487.95.95 0 00.121.527c.088.152.21.29.365.407.148.107.315.203.502.287.183.08.369.155.555.228l.145.056-.003.003a.167.167 0 01.064.095c.01.037.01.072 0 .106a.163.163 0 01-.052.076l-.01.007c-.05.035-.106.06-.164.074a.413.413 0 01-.108.015.493.493 0 01-.132-.018l-.085-.028a4.283 4.283 0 01-.482-.215 5.15 5.15 0 01-.512-.287 4.278 4.278 0 01-.491-.364 2.99 2.99 0 01-.419-.426 1.844 1.844 0 01-.291-.498 1.463 1.463 0 01-.1-.578c.005-.234.052-.458.143-.667.092-.21.217-.4.375-.567.158-.167.34-.305.547-.412.21-.108.433-.183.665-.222a2.77 2.77 0 01.69-.035c.277.025.537.09.782.193z"/></svg>
-            Linux
-          </a>
+        <div class="download-buttons single">
+          <a href="/download/" class="download-btn">Download Kindling — Free</a>
         </div>
-
         <p class="download-note">
           Need help? See <a href="https://github.com/smith-and-web/kindling/wiki/Installation">installation guide</a>
         </p>
@@ -683,6 +666,7 @@
           <p>Import from Plottr, yWriter, or Obsidian Longform. Export to DOCX or Markdown. Your work stays portable.</p>
         </div>
       </div>
+      <p style="text-align: center; margin-top: 32px;"><a href="/features/" style="color: var(--ember-orange); font-weight: 500;">See all features →</a></p>
     </div>
   </section>
 
@@ -717,7 +701,7 @@
       <p>Download Kindling and start writing with your outline visible.</p>
 
       <div class="download-buttons single" style="margin-bottom: 24px;">
-        <a href="https://github.com/smith-and-web/kindling/releases/latest" class="download-btn">
+        <a href="/download/" class="download-btn">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" style="width:20px;height:20px;">
             <path stroke-linecap="round" stroke-linejoin="round" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4" />
           </svg>
@@ -742,30 +726,38 @@
   </section>
 
   <footer>
-    <div class="footer-social">
-      <a href="https://discord.gg/CNcS7WPR" target="_blank" rel="noopener" aria-label="Discord">
-        <svg viewBox="0 0 24 24" fill="currentColor"><path d="M20.317 4.3698a19.7913 19.7913 0 00-4.8851-1.5152.0741.0741 0 00-.0785.0371c-.211.3753-.4447.8648-.6083 1.2495-1.8447-.2762-3.68-.2762-5.4868 0-.1636-.3933-.4058-.8742-.6177-1.2495a.077.077 0 00-.0785-.037 19.7363 19.7363 0 00-4.8852 1.515.0699.0699 0 00-.0321.0277C.5334 9.0458-.319 13.5799.0992 18.0578a.0824.0824 0 00.0312.0561c2.0528 1.5076 4.0413 2.4228 5.9929 3.0294a.0777.0777 0 00.0842-.0276c.4616-.6304.8731-1.2952 1.226-1.9942a.076.076 0 00-.0416-.1057c-.6528-.2476-1.2743-.5495-1.8722-.8923a.077.077 0 01-.0076-.1277c.1258-.0943.2517-.1923.3718-.2914a.0743.0743 0 01.0776-.0105c3.9278 1.7933 8.18 1.7933 12.0614 0a.0739.0739 0 01.0785.0095c.1202.099.246.1981.3728.2924a.077.077 0 01-.0066.1276 12.2986 12.2986 0 01-1.873.8914.0766.0766 0 00-.0407.1067c.3604.698.7719 1.3628 1.225 1.9932a.076.076 0 00.0842.0286c1.961-.6067 3.9495-1.5219 6.0023-3.0294a.077.077 0 00.0313-.0552c.5004-5.177-.8382-9.6739-3.5485-13.6604a.061.061 0 00-.0312-.0286zM8.02 15.3312c-1.1825 0-2.1569-1.0857-2.1569-2.419 0-1.3332.9555-2.4189 2.157-2.4189 1.2108 0 2.1757 1.0952 2.1568 2.419 0 1.3332-.9555 2.4189-2.1569 2.4189zm7.9748 0c-1.1825 0-2.1569-1.0857-2.1569-2.419 0-1.3332.9554-2.4189 2.1569-2.4189 1.2108 0 2.1757 1.0952 2.1568 2.419 0 1.3332-.946 2.4189-2.1568 2.4189Z"/></svg>
-      </a>
-      <a href="https://twitter.com/KindlingWriter" target="_blank" rel="noopener" aria-label="X (Twitter)">
-        <svg viewBox="0 0 24 24" fill="currentColor"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg>
-      </a>
-      <a href="https://bsky.app/profile/kindlingwriter.com" target="_blank" rel="noopener" aria-label="Bluesky">
-        <svg viewBox="0 0 24 24" fill="currentColor"><path d="M12 10.8c-1.087-2.114-4.046-6.053-6.798-7.995C2.566.944 1.561 1.266.902 1.565.139 1.908 0 3.08 0 3.768c0 .69.378 5.65.624 6.479.815 2.736 3.713 3.66 6.383 3.364.136-.02.275-.039.415-.056-.138.022-.276.04-.415.054-3.239.377-6.215 1.963-5.54 6.349.91 5.91 7.036 7.07 9.495 2.63.252-.455.45-.944.592-1.46.142.516.34 1.005.592 1.46 2.46 4.44 8.585 3.28 9.495-2.63.675-4.386-2.301-5.972-5.54-6.349-.14-.014-.277-.032-.415-.054.14.017.279.036.415.056 2.67.296 5.568-.628 6.383-3.364.246-.828.624-5.79.624-6.478 0-.69-.139-1.861-.902-2.206-.659-.298-1.664-.62-4.3 1.24C16.046 4.748 13.087 8.687 12 10.8z"/></svg>
-      </a>
-      <a href="https://www.instagram.com/kindling.writer/" target="_blank" rel="noopener" aria-label="Instagram">
-        <svg viewBox="0 0 24 24" fill="currentColor"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zM12 0C8.741 0 8.333.014 7.053.072 2.695.272.273 2.69.073 7.052.014 8.333 0 8.741 0 12c0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98C8.333 23.986 8.741 24 12 24c3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98C15.668.014 15.259 0 12 0zm0 5.838a6.162 6.162 0 100 12.324 6.162 6.162 0 000-12.324zM12 16a4 4 0 110-8 4 4 0 010 8zm6.406-11.845a1.44 1.44 0 100 2.881 1.44 1.44 0 000-2.881z"/></svg>
-      </a>
-      <a href="https://www.facebook.com/profile.php?id=61586930760878" target="_blank" rel="noopener" aria-label="Facebook">
-        <svg viewBox="0 0 24 24" fill="currentColor"><path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/></svg>
-      </a>
-      <a href="https://www.linkedin.com/company/kindling-writer/" target="_blank" rel="noopener" aria-label="LinkedIn">
-        <svg viewBox="0 0 24 24" fill="currentColor"><path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433a2.062 2.062 0 01-2.063-2.065 2.064 2.064 0 112.063 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/></svg>
-      </a>
-      <a href="https://github.com/smith-and-web/kindling" target="_blank" rel="noopener" aria-label="GitHub">
-        <svg viewBox="0 0 24 24" fill="currentColor"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg>
-      </a>
+    <div class="footer-grid">
+      <div class="footer-column">
+        <h4>Links</h4>
+        <ul>
+          <li><a href="/features/">Features</a></li>
+          <li><a href="/download/">Download</a></li>
+          <li><a href="/compare/">Compare</a></li>
+          <li><a href="/open-source/">Open Source</a></li>
+          <li><a href="/blog/">Blog</a></li>
+        </ul>
+      </div>
+      <div class="footer-column">
+        <h4>Community</h4>
+        <ul>
+          <li><a href="https://github.com/smith-and-web/kindling" target="_blank" rel="noopener">GitHub</a></li>
+          <li><a href="https://discord.gg/CNcS7WPR" target="_blank" rel="noopener">Discord</a></li>
+          <li><a href="https://twitter.com/KindlingWriter" target="_blank" rel="noopener">Twitter/X</a></li>
+          <li><a href="https://bsky.app/profile/kindlingwriter.com" target="_blank" rel="noopener">Bluesky</a></li>
+        </ul>
+      </div>
+      <div class="footer-column">
+        <h4>Legal</h4>
+        <ul>
+          <li><a href="https://opensource.org/licenses/MIT">MIT License</a></li>
+          <li><a href="/privacy/">Privacy Policy</a></li>
+        </ul>
+      </div>
     </div>
-    <p>Kindling &copy; 2026. Built with care for writers. <a href="https://github.com/smith-and-web/kindling">View on GitHub</a></p>
+    <div class="footer-bottom">
+      <p>&copy; 2025 Kindling. Free and open source.</p>
+      <p class="footer-tagline">Your words, your data, forever.</p>
+    </div>
   </footer>
 
   <script src="assets/site.js" defer></script>
